// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconFacebookLogo /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconFacebookLogo /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconFacebookLogo /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconFacebookLogo /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconFacebookLogo /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconFacebookLogo /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconFacebookLogo /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M211 59v143.1c0 4.9-4 8.9-8.9 8.9H165v-63h18.7l2.7-24H165v-16.3c0-5.7 2.9-7.7 5.5-7.7H187V76h-21.6c-22.9 0-27.4 18.2-27.4 30.1V124h-15v24h15v63H59.8c-6 0-10.8-4.9-10.8-11V59.7C49 53.8 53.8 49 59.6 49H201c5.5 0 10 4.5 10 10z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
